# kyoga

./: .gitignore  README.md  README.pt-br.md  com.github.natorsc.Kyoga.json  pyproject.toml
modules/: python3-pdm-backend.json  python3-pdm.json
resources/: resources.qrc  setup.py
resources/locales/: kyoga.pt_BR.ts
src/kyoga/: app.py  resources_rc.py
src/kyoga/ui/: MainWindow.py
